# Rustora

./: .gitignore  CODE_REVIEW.md  Cargo.toml  README.md  build_egui.ps1  build_no_npm.ps1  package-lock.json  run.bat  setup.ps1
.claude/: settings.local.json
.claude/agents/: data-engineering-architect.md  python-backend-architect.md  rust-backend-architect.md  senior-tech-pm.md
.github/workflows/: ci.yml
core_engine/: Cargo.toml
core_engine/src/: error.rs  filter.rs  lib.rs  session.rs  storage.rs  transform_history.rs
desktop_egui/: Cargo.toml
desktop_egui/src/: app.rs  facade.rs  main.rs  state.rs
desktop_egui/src/ui/: chart_panel.rs  data_grid.rs  dialogs.rs  ingest_dialog.rs  menu_bar.rs  mod.rs  sql_panel.rs  stats_panel.rs  status_bar.rs  steps_panel.rs  table_list.rs  theme.rs  welcome.rs
desktop_ui/: index.html  package-lock.json  package.json
desktop_ui/src/: App.css  App.tsx
desktop_ui/src-tauri/: Cargo.toml  tauri.conf.json  tauri.standalone.conf.json
desktop_ui/src-tauri/icons/: icon.icns
desktop_ui/src-tauri/src/: lib.rs  main.rs
desktop_ui/src/components/: CalcColumnDialog.tsx  ChartPanel.tsx  DataGrid.tsx  ErrorBoundary.tsx  FilterDialog.tsx  FilterPopover.tsx  GroupByDialog.tsx  MenuBar.tsx  SqlPanel.tsx  StatsPanel.tsx  StatusBar.tsx  TableList.tsx
desktop_ui/src/constants/: filterOperators.ts
desktop_ui/src/hooks/: useDataset.ts
desktop_ui/src/lib/: arrow.ts  error.ts
dev_docs/: Architecture_Review_Report.md  GEMINI_REVIEW.md  OPENCODE_REVIEW.md  OPENCODE_REVIEW_v2.md  TODAYSPLAN.md  code_ups.md  examples.txt
python_api/: Cargo.toml  pyproject.toml  rustora.pyi  test_smoke.py
python_api/src/: lib.rs
