[workspace]
members = ["core_engine", "desktop_ui/src-tauri", "python_api"]
resolver = "2"

[workspace.dependencies]
polars = { version = "0.46", features = [
    "lazy",
    "parquet",
    "csv",
    "ipc",
    "ipc_streaming",
    "streaming",
    "dtype-struct",
    "dtype-categorical",
    "dtype-date",
    "dtype-datetime",
    "dtype-duration",
    "dtype-time",
    "sql",
] }
duckdb = { version = "1.4", features = ["bundled"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
