[package]
name = "core_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { workspace = true }
duckdb = { workspace = true }
arrow-ipc = "56"
arrow-schema = "56"
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.14"
