[package]
name = "desktop_ui"
version = "0.1.0"
description = "Rustora - High-performance data analysis tool"
authors = ["you"]
edition = "2021"

[lib]
name = "desktop_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
core_engine = { path = "../../core_engine" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
